--- a/p4/p4-part1.ipynb
+++ b/p4/p4-part1.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Project 4 - Facial Keypoint Detection with Neural Networks\n"
+    "# Project 4 - Part 1 - Nose Tip Detection\n"
    ]
   },
   {
